# nvcfund-2.0.0-R

./: gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  wsgi.py
docs/: DEVELOPER_GUIDE_UNIFIED_UI.md  README.md  UI_DESIGN_SYSTEM.md
docs/api/: API_DOCUMENTATION.md
docs/compliance/: README.md
docs/deployment/: AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  README.md
docs/development/: CRITICAL_DATETIME_ISSUE.md  CRITICAL_ISSUES_SUMMARY.md  DATABASE_SCHEMA.md  DEVELOPER_GUIDE.md  DEVELOPER_ONBOARDING.md  README.md
docs/modules/: MODULE_DOCUMENTATION.md
docs/operations/: INCIDENT_RESPONSE.md  OPERATIONS_RUNBOOK.md  PACKAGE_UPDATE_STRATEGY.md  PACKAGE_UPDATE_SYSTEM.md  README.md  SAFE_CICD_UPDATE_STRATEGY.md  TROUBLESHOOTING_MANUAL.md
docs/security/: DATA_SECURITY_GUIDE.md  INFRASTRUCTURE_SECURITY_GUIDE.md  README.md  SECURITY_IMPLEMENTATION_STATUS.md  SECURITY_POLICY_COMPLIANCE.md  SECURITY_UPDATE_SUMMARY.md
docs/user-guides/: LIVE_INTERFACE_SUMMARY.md  LIVE_WEB_INTERFACES.md  README.md  USER_MANUAL.md  VISUAL_INTERFACE_GUIDE.md  VISUAL_USER_GUIDE.md
nvcfund-backend/: app_factory.py  config.py  main.py  requirements.txt  start_dev.py  test_accessibility.py  test_rbac_security.py
nvcfund-backend/modules/: __init__.py
nvcfund-backend/scripts/: analyze_template_duplicates.py  code_quality_analyzer.py  list_routes.py  (+13 more)
scripts/: README.md  analyze_packages_monthly.sh  check_security.py  check_security_weekly.sh  plan_updates.py  quick_issue_summary.py  real_routing_diagnosis.py  setup_automation.sh
(+633 files in other folders)
