[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.4",
    "django-user-management>=18.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "markdown>=3.8",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.40",
    "web3>=7.12.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "numpy>=2.3.1",
    "sendgrid>=6.12.4",
    "flask-socketio>=5.5.1",
    "flask-dance>=7.1.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-limiter>=3.12",
    "flask-cors>=6.0.1",
    "bleach>=6.2.0",
    "pandas>=2.3.0",
    "plaid-python>=34.0.0",
    "flask-caching>=2.3.1",
    "flask-session>=0.8.0",
    "beautifulsoup4>=4.13.4",
    "qrcode[pil]>=8.2",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "weasyprint>=65.1",
    "pyotp>=2.9.0",
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pip-audit>=2.9.0",
    "pip-tools>=7.4.1",
    "playwright>=1.53.0",
    "email-validator>=2.2.0",
    "boto3>=1.39.3",
]
